# SP-Course-Task2

./: CMakeLists.txt
src/: calculator.cpp  calculator.h  main.cpp
